# INITIATE AUTOCONF
AC_INIT([src/Makefile.am])

#BEGIN DEFAULT SETTINGS


# General

CXXFLAGS="-Wall -W"


#END DEFAULT SETTINGS



# BEGIN GENERAL AUTOCONF STUFF

AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(openalpp,0.2)

dnl C++ style
AC_LANG_CPLUSPLUS
#CXX=g++
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AM_PROG_LIBTOOL

dnl Check system type
AC_CANONICAL_HOST

dnl create only shared libtool-libraries
AC_ENABLE_SHARED(yes)

dnl set the following to yes, if you want to create static
dnl libtool-libraries
AC_ENABLE_STATIC(no)

# ***** DEBUGGING
AC_ARG_ENABLE(debug,[  --enable-debug          enable debugging [default=no]])
if test "$enable_debug" = "yes"; then
    CXXFLAGS="-g $CXXFLAGS"
else
    CXXFLAGS="-O2 $CXXFLAGS"
fi

# ***** PROFILING
AC_ARG_ENABLE(profiling,[  --enable-profiling  enable profiling [default=no]])
if test "$enable_profiling" = "yes"; then
    CXXFLAGS="-pg $CXXFLAGS"
fi
CPPFLAGS="$CPPFLAGS -I/usr/local/include"

# ***** VRLAB_PREFIX
if test "$VRLAB_PREFIX"; then
    if test "$prefix" = "NONE"; then
        prefix="$VRLAB_PREFIX"
    fi
    CPPFLAGS="$CPPFLAGS -I$VRLAB_PREFIX/include"
    LDFLAGS="$LDFLAGS -L$VRLAB_PREFIX/lib"
fi


# END GENERAL AUTOCONF STUFF

dnl Checks for libraries.
# OpelAL
AC_CHECK_LIB(openal,main)

# Common C++
AC_CHECK_LIB(ccgnu2,main,WITH_CCGNU="yes",,-lpthread -ldl)
AC_SUBST(CCGNULIBS)
AC_SUBST(CCGNUCFLAGS)
if test "$WITH_CCGNU" = "yes"; then
    CCGNULIBS="`ccgnu2-config --libs`"
    CCGNUCFLAGS="-I`ccgnu2-config --includes`"
    CPPFLAGS="$CPPFLAGS $CCGNUCFLAGS"
fi
AM_CONDITIONAL(WITH_CCGNU, test "$WITH_CCGNU" = "yes")

# PortAudio
AC_CHECK_LIB(portaudio,main,WITH_PORTAUDIO="yes")
AM_CONDITIONAL(WITH_PORTAUDIO, test "$WITH_PORTAUDIO" = "yes")

# Ogg Vorbis
AC_CHECK_LIB(ogg,main,WITH_OGGVORBIS="yes")
AM_CONDITIONAL(WITH_OGGVORBIS, test "$WITH_OGGVORBIS" = "yes")

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
#AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT(Makefile include/Makefile include/openalpp/Makefile src/Makefile tests/Makefile openalpp.pc)
