LINK_DIRECTORIES(../src)

FIND_LIBRARY(EXTRALIBS openal ${LIBDIRS})

IF(CCGNU_FOUND)
  FIND_LIBRARY(CCGNULIB ccgnu2 ${LIBDIRS})
  IF(CCGNULIB) 
    FIND_LIBRARY(THREADLIB pthread ${LIBDIRS})
    FIND_LIBRARY(DLLIB dl ${LIBDIRS})
    SET(EXTRALIBS ${EXTRALIBS} ${CCGNULIB} ${DLLIB} ${THREADLIB})
  ENDIF(CCGNULIB)

  IF(PORTAUDIO_FOUND)
    FIND_LIBRARY(PALIB portaudio ${LIBDIRS})
    IF(PALIB)
      SET(EXTRALIBS ${EXTRALIBS} ${PALIB})
    ENDIF(PALIB)
  ENDIF(PORTAUDIO_FOUND)

  IF(VORBIS_FOUND)
    FIND_LIBRARY(VORBISFILELIB vorbisfile ${LIBDIRS})
    FIND_LIBRARY(VORBISLIB vorbis ${LIBDIRS})
    FIND_LIBRARY(OGGLIB ogg ${LIBDIRS})
    IF(VORBISLIB)
      SET(EXTRALIBS ${EXTRALIBS} ${VORBISFILELIB} ${VORBISLIB} ${OGGLIB})
    ENDIF(VORBISLIB)
  ENDIF(VORBIS_FOUND)
ENDIF(CCGNU_FOUND)

IF(CCGNU_FOUND)
  ADD_EXECUTABLE(moving moving.cpp)
  TARGET_LINK_LIBRARIES(moving openalpp ${EXTRALIBS})
  ADD_EXECUTABLE(simple simple.cpp)
  TARGET_LINK_LIBRARIES(simple openalpp ${EXTRALIBS})
  ADD_EXECUTABLE(testmic testmic.cpp)
  TARGET_LINK_LIBRARIES(testmic openalpp ${EXTRALIBS})
  ADD_EXECUTABLE(testsend testsend.cpp)
  TARGET_LINK_LIBRARIES(testsend openalpp ${EXTRALIBS})
  ADD_EXECUTABLE(teststream teststream.cpp)
  TARGET_LINK_LIBRARIES(teststream openalpp ${EXTRALIBS})
ENDIF(CCGNU_FOUND)
ADD_EXECUTABLE(testfstream testfstream.cpp)

TARGET_LINK_LIBRARIES(testfstream openalpp ${EXTRALIBS})
