bin_PROGRAMS = SampleEditApplication
SampleEditApplication_SOURCES = SampleEditMain.cpp ../SampleUtilities/Camera.cpp ../SampleUtilities/Matrix.cpp ../SampleUtilities/Data.cpp
INCLUDES = -I../SampleUtilities -I../../include
AM_CXXFLAGS = `sdl-config --cflags`
SampleEditApplication_LDFLAGS = `sdl-config --libs`
SampleEditApplication_LDADD = ../../src/libDemeter.la


