bin_PROGRAMS = SamplePaintApplication
SamplePaintApplication_SOURCES = SamplePaintMain.cpp ../SampleUtilities/Camera.cpp ../SampleUtilities/Matrix.cpp ../SampleUtilities/Data.cpp
INCLUDES = -I../SampleUtilities -I../../include
AM_CXXFLAGS = `sdl-config --cflags`
SamplePaintApplication_LDFLAGS = `sdl-config --libs`
SamplePaintApplication_LDADD = ../../src/libDemeter.la


