bin_PROGRAMS = SampleProceduralTextureApplication
SampleProceduralTextureApplication_SOURCES = SampleProceduralTextureMain.cpp SampleTextureFactory.cpp SampleTextureFactory.h ../SampleUtilities/Camera.cpp ../SampleUtilities/Matrix.cpp ../SampleUtilities/Data.cpp
INCLUDES = -I../SampleUtilities -I../../include
AM_CXXFLAGS = `sdl-config --cflags`
SampleProceduralTextureApplication_LDFLAGS = `sdl-config --libs`
SampleProceduralTextureApplication_LDADD = ../../src/libDemeter.la


