bin_PROGRAMS = SampleRawApplication
SampleRawApplication_SOURCES = SampleRawMain.cpp Elevations.h ../SampleUtilities/Camera.cpp ../SampleUtilities/Matrix.cpp ../SampleUtilities/Camera.h ../SampleUtilities/Matrix.h ../SampleUtilities/Data.cpp
INCLUDES = -I../SampleUtilities -I../../include
AM_CXXFLAGS = `sdl-config --cflags`
SampleRawApplication_LDFLAGS = `sdl-config --libs`
SampleRawApplication_LDADD = ../../src/libDemeter.la


