bin_PROGRAMS = SampleSkyBoxApplication
SampleSkyBoxApplication_SOURCES = SampleSkyBoxMain.cpp ../SampleUtilities/Camera.cpp ../SampleUtilities/Matrix.cpp ../SampleUtilities/Data.cpp
INCLUDES = -I../SampleUtilities -I../../include
AM_CXXFLAGS = `sdl-config --cflags`
SampleSkyBoxApplication_LDFLAGS = `sdl-config --libs`
SampleSkyBoxApplication_LDADD = ../../src/libDemeter.la


