bin_PROGRAMS = SampleTerrainLatticeApplication
SampleTerrainLatticeApplication_SOURCES = SampleTerrainLatticeMain.cpp ../SampleUtilities/Camera.cpp ../SampleUtilities/Matrix.cpp ../SampleUtilities/Data.cpp
INCLUDES = -I../SampleUtilities -I../../include
AM_CXXFLAGS = `sdl-config --cflags`
SampleTerrainLatticeApplication_LDFLAGS = `sdl-config --libs`
SampleTerrainLatticeApplication_LDADD = ../../src/libDemeter.la


